# Tokenizer

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  perf.py  pyproject.toml  release.sh  setup.cfg  setup.py
.github/workflows/: python-package.yml  release.yml
src/tokenizer/: Abbrev.conf  __init__.py  abbrev.py  abbrev.pyi  definitions.py  main.py  tokenizer.py  tokenizer.pyi
test/: Overview.txt  example.txt  test_abbrev.py  test_cli.py  test_composite_glyphs.py  test_dashes.py  test_detokenize.py  test_helper_functions.py  test_index_calculation.py  test_tokenizer.py  test_tokenizer_tok.py  toktest_edgecases.txt  toktest_edgecases_diff.txt  toktest_edgecases_gold_expected.txt  toktest_large.txt  toktest_large_gold.txt  toktest_large_gold_acceptable.txt  toktest_large_gold_perfect.txt  toktest_normal.txt  toktest_normal_gold_expected.txt  toktest_sentences.txt
