[project]
name = "tokenizer"
version = "3.5.1"
description = "A tokenizer for Icelandic text"
authors = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: Icelandic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/mideind/Tokenizer"
homepage = "https://mideind.is"

[project.optional-dependencies]
# dev dependencies
dev = ["pytest"]

[project.scripts]
# 'tokenize' command line tool
tokenize = "tokenizer.main:main"

# *** Configuration of tools ***

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
include = ["src/tokenizer/*.conf"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
#select = ["ALL"] # We use default rules for now
extend-select = ["E501"] # Complain about line length
# Ignore specific rules
# (we should aim to have these as few as possible)
ignore = [
    "F405", # 'F405: Name may be undefined, or defined from star imports: typing'
    "E731", # 'E731: Do not assign a lambda expression, use a def'
]

[tool.isort]
# This forces these imports to placed at the top
known_future_library = ["typing"]
profile = "black"
line_length = 88
